<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/alert_dialog_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_barcode_manually"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/barcode_manually_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/barcode_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/alert_cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/alert_ok"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/button_OK" />


    </LinearLayout>


</LinearLayout>